# GBA-Emulator

./: .clang-format  .gitignore  ARM ISA.xls  ARM ISA.xlsx  CMakeLists.txt  Makefile  README.md  arm32_isa.cpp  conanfile.txt  create_new_app_module.sh  create_new_lib_module.sh  makefile  master  thumb_isa.cpp
lib/googletest/: CMakeLists.txt.in
src/: CMakeLists.txt  arm32_isa.cpp  arm7tdmi.cpp  bus.cpp  main.cpp  master  master.cpp  thumb_isa.cpp
src/cpu/: CMakeLists.txt  arm32_isa.cpp  arm7tdmi.cpp  bus.cpp  thumb_isa.cpp
src/cpu/include/: bus.hh
src/cpu/include/GBA-emulator/cpu/: arm7tdmi.hh  bus.hh  bus.tpp
src/cpu/src/: arm32_isa.cpp  arm7tdmi.cpp  bus.cpp  thumb_isa.cpp
src/cpu/test/: CMakeLists.txt  thumb_isa_test.cpp
src/cpu/tests/: CMakeLists.txt  test_arm32_isa.cpp  test_thumb_isa.cpp
src/headers/: arm7tdmi.hh  bus.hh  bus.tpp  master.hh  memory.hh
templates/template_app_module/: CMakeLists.txt
templates/template_app_module/src/: main.cpp
templates/template_app_module/tests/: main_test.cpp
templates/template_lib_module/: CMakeLists.txt
templates/template_lib_module/src/: main.cpp
templates/template_lib_module/tests/: CMakeLists.txt  main_test.cpp
